styles.css
img {
  display: inline;
}
img:focus {
  outline: 0;
}
body{
  font-family: 'Alfa Slab One', cursive;
}
h3,h4, p{
  font-family:'Open Sans', sans-serif;
  text-align: center;
}
p{
 font-size: 1.125rem; 
  max-width: 56.25rem;
  margin-left: auto;
  margin-right: auto;
  line-height: 2rem;
}
h1,h2,h3,h4{
  display:block !important;
  width:100%;
  text-align: center;
}

a {
  text-decoration: none;
}

ul {
  list-style-type: none;
  text-decoration: none;
}

li {
  padding-left: 0.75rem;
  list-style-type: none;
}

/*header*/
.logo-principal{
  width: 25%;
  margin: auto;
  display: flex;
}
h1{
  margin-top: 7rem;
  margin-bottom: 1rem;
  font-size: 5rem;
}
.text-separator{
  border-top: 0.25rem solid #188A2E;
  width: 15.625rem;
  margin-bottom: 2rem;
  margin-left: auto;
  margin-right: auto;

}
.video-container {
  width: 100%;
  display: flex;
  flex-direction: column;
  align-items: center;
  margin-bottom: 5rem;
}
@keyframes fadeInUp {
  from { 
    opacity: 0;
    -webkit-transform: translate3d(100%, 0, 0);
    transform: translate3d(100%, 0, 0);
  }

  to {
    opacity: 1;
    -webkit-transform: none;
    transform: none;
  }
}
h2{
   margin-bottom: 0.3rem; 
  margin-top: 1.5rem;
}

/*navbar*/
header .navbar{
  background-color: transparent;
}
.navbar-dark .navbar-nav .nav-link:hover, .navbar-dark .navbar-nav .nav-link:active{
  color:#188A2E !important;
}
.navbar.fixed-nav {
  position: fixed;
  width: 100%;
  top: 0;
  z-index: 20;
  background-color: #000;
  padding-top: 1rem;
  padding-bottom: 1rem;
}

.navbar-bg{
   background-color: #000;
  width: 100%;
    padding-top: 1rem;
  padding-bottom: 1rem;
}

.navbar-bg .navbar-dark .navbar-nav .show > .nav-link, .navbar-bg .navbar-dark .navbar-nav .active > .nav-link, .navbar-bg .navbar-dark .navbar-nav .nav-link.show, .navbar-bg .navbar-dark .navbar-nav .nav-link.active, .navbar-dark .navbar-nav .nav-link{
  color: #FFF;
  font-weight:500;
  letter-spacing: 0.125rem;
  font-size: 1.5rem;
}

/*what*/
iframe{
  margin-top:2rem;
}
.portfolio{
  margin-bottom: 5rem;
}
.logo-title{
  color: #188A2E;
}
/*card*/
.card{
  margin-top: 2rem;
  margin-bottom: 2.5rem;
  margin-left: auto;
  margin-right: auto;
}
.card p{
  text-align: left;
}
.card-list {
  margin-bottom: 0;
  padding-left: 1.125rem;
  font-family: 'Open Sans', sans-serif;
  font-weight: normal;
}
.card-list, .card-list-item {
  list-style-type: disc;
}
.card-list-item {
  padding-left: 0;
  padding-bottom: 0.375rem;
  font-size: 1.125rem;
}
.card-list-item:last-of-type {
  padding-bottom: 0;
}
.card-img-top {
  max-height: 11.563rem;
  object-fit: contain;
}
.card-img-done {
  object-fit: cover;
}
.google_badge{
  width: 60%;
}
/*how*/
.btn-secondary{
  background-color:#188A2E;
  margin:auto;
  display: flex;
  border: 0 solid #FFF;
  margin-top: 1rem;
}
.btn-secondary:hover{
  background-color: #000;
}
.ir-arriba{
  display: none;
  padding: 0.9375rem 1.25rem;
  background: #188A2E;
  font-size: 1.5rem;
  color: #fff;
  cursor: pointer;
  position: fixed;
  bottom: 1.25rem;
  right: 1.25rem;
  z-index: 10;
}
.fa-angle-up:before {
    content: "\f106";
}
.navbar{
  justify-content: flex-end;
}
/*footer*/
.footer-container{
  background-color: #000;
    overflow: hidden;
  width: 100%;
    display: flex;
  justify-content: center;
}
.footer-container a{
  color: #188A2E;
}
.footer-container figure{
      display: flex;
  justify-content: center;
}
.footer-container .logo{
  width: 12.5rem;
  height: 13.875rem;
  margin-top: 1rem;

}
.footer-container p{
  color: #FFF;
  text-align: center;
  font-family: 'Open Sans', sans-serif;
}

.navbar-expand-lg .navbar-collapse{
  justify-content: flex-end;
}

.footer-buttons a{
  color: #FFF;
  font-size: 1.75rem;
}

.footer-buttons i{
  margin-left: 0.625rem;
}
.footer-buttons a:first-of-type i{
  margin-left: 0;
}

.footer-container .subtitle-footer.g-attr{
  width: 75%;
}

/*contact me*/
.contact-form{
  width: 40%;
  margin: 0 auto;
}

.contact-form .form-control{
  font-family: 'Open Sans', sans-serif;
}

.contact-me .contact-p{
  max-width: 37.5rem;
} 

.contact-buttons .btn{
  width: fit-content;
  margin: 1rem;
}

.contact-buttons .btn i{
  font-size: 1.375rem;
  margin-left: 0.625rem;
}

@media screen and (max-width: 600px) {
  .logo-principal{
    width: 50%;
  }
  .nav-bar{
        justify-content: flex-end;
  }
  .navbar-nav li{
    display: flex;
    justify-content: flex-end;
  }
  .subtitle-footer{
    margin-left: auto;
    margin-right: auto;
    font-size: 0.875rem;
    line-height: 1.125rem;
    width: 15.625rem;
  }
  .footer-container .logo {
    width: 12.5rem;
    height: 13.875rem;
  }
  h1{
    margin-top: 4rem;
    font-size: 3rem;
  }
    .contact-form{
    width: 90%;
    margin: 0 auto;
  }
}

@media (min-width: 992px) and (max-width: 1199px){
  .card-img-top {
    max-height: 15.938rem;
  }
}

@media (min-width: 1200px){
  .card-img-top {
    max-height: 12.5rem;
  }

  .portfolio{
    margin-bottom: 3rem;
  }
}

